# trading-engine

./: Cargo.toml  Dockerfile  Makefile  README.md  build.rs  config.toml  docker-compose.yml
benches/: benchmark.rs
docs/: rust_trading_system.md
schemas/: trade_event.fbs
scripts/: benchmark.sh  monitor.sh  setup.sh  start.sh
src/: lib.rs  main.rs
src/event/: mod.rs  processor.rs  trade_event.rs
src/queue/: lockfree_queue.rs  mod.rs
src/serialization/: flatbuf_codec.rs  mod.rs
src/utils/: metrics.rs  mod.rs
tests/: integration_tests.rs
