[package]
name = "trading-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
flatbuffers = "25.2.10"
crossbeam = "0.8"
crossbeam-queue = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "6.1.0"
atomic_float = "1.1.0"
num_cpus = "1.0"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
rand = "0.9.1"

[build-dependencies]
flatc-rust = "0.2"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"